// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-form> Component checkbox 1`] = `
<div class="c-bolt-input-list__item">
  <input type="checkbox"
         id="checkbox"
         name
         class="c-bolt-input c-bolt-input--checkbox"
  >
  <label for="checkbox"
         class="c-bolt-inline-label c-bolt-inline-label--checkbox"
  >
    Single Checkbox
  </label>
</div>
`;

exports[`<bolt-form> Component disabled input 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Don&#039;t try to edit this"
         disabled="disabled"
         type="text"
         class="c-bolt-input c-bolt-input--text"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <bolt-icon name="warning"
                       size="medium"
            >
            </bolt-icon>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "email" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter email address"
         type="email"
         class="c-bolt-input c-bolt-input--email"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <bolt-icon name="warning"
                       size="medium"
            >
            </bolt-icon>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "number" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter Pin Nmber"
         type="number"
         class="c-bolt-input c-bolt-input--number"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <bolt-icon name="warning"
                       size="medium"
            >
            </bolt-icon>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "password" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter Password"
         type="password"
         class="c-bolt-input c-bolt-input--password"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <bolt-icon name="warning"
                       size="medium"
            >
            </bolt-icon>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "search" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter Search Terms"
         type="search"
         class="c-bolt-input c-bolt-input--search"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <bolt-icon name="warning"
                       size="medium"
            >
            </bolt-icon>
          </div>
        </li>
        <li class="o-bolt-inline-list__item">
          <button class="c-bolt-input-icon c-bolt-input-icon--link"
                  type="submit"
          >
            <bolt-icon name="search"
                       size="medium"
            >
            </bolt-icon>
          </button>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "tel" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter Phone Number"
         type="tel"
         class="c-bolt-input c-bolt-input--tel"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <bolt-icon name="warning"
                       size="medium"
            >
            </bolt-icon>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component input with inputAttribute "text" 1`] = `
<div class="c-bolt-input-list__item">
  <input placeholder="Enter a Title"
         type="text"
         class="c-bolt-input c-bolt-input--text"
  >
  <div class="c-bolt-input-icons">
    <bolt-input-icons>
      <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
        <li class="o-bolt-inline-list__item">
          <div class="c-bolt-input-icon--invalid">
            <bolt-icon name="warning"
                       size="medium"
            >
            </bolt-icon>
          </div>
        </li>
      </ul>
    </bolt-input-icons>
  </div>
  <label class="c-bolt-floating-label">
    Title
  </label>
</div>
`;

exports[`<bolt-form> Component radio button 1`] = `
<div class="c-bolt-input-list__item">
  <input type="radio"
         id="radio"
         name
         class="c-bolt-input c-bolt-input--radio"
  >
  <label for="radio"
         class="c-bolt-inline-label c-bolt-inline-label--radio"
  >
    Single Radio
  </label>
</div>
`;

exports[`<bolt-form> Component selection list 1`] = `
<select class="c-bolt-input c-bolt-input--select">
  <option value>
    - Select an option -
  </option>
  <option value="option-a">
    Option A
  </option>
  <option value="option-b">
    Option B
  </option>
</select>
<div class="c-bolt-input-icons">
  <bolt-input-icons>
    <ul class="o-bolt-inline-list o-bolt-inline-list--xsmall">
      <li class="o-bolt-inline-list__item">
        <div class="c-bolt-input-icon--invalid">
          <bolt-icon name="warning"
                     size="medium"
          >
          </bolt-icon>
        </div>
      </li>
      <li class="o-bolt-inline-list__item">
        <div class="c-bolt-input-icon">
          <bolt-icon name="chevron-down"
                     size="medium"
          >
          </bolt-icon>
        </div>
      </li>
    </ul>
  </bolt-input-icons>
</div>
`;

exports[`<bolt-form> Component textarea 1`] = `
<div class="c-bolt-input-list__item">
  <textarea placeholder="Describe the job"
            required
            class="c-bolt-input"
  >
  </textarea>
  <label class="c-bolt-floating-label">
    Job Description
  </label>
</div>
`;
